# nexus

./: .gitignore  1.sh  Cargo.toml  README.md  tree.md
config/: nexus.default.toml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: config.rs  main.rs  runtime.rs
crates/nexus-cli/src/commands/: mem.rs  mod.rs  run.rs  status.rs  tool.rs  tui.rs  up.rs
crates/nexus-flow/: Cargo.toml
crates/nexus-flow/src/: checkpoint.rs  dag.rs  dsl.rs  executor.rs  lib.rs  loader.rs
crates/nexus-kernel/: Cargo.toml
crates/nexus-kernel/src/: agent.rs  capabilities.rs  error.rs  kernel.rs  lib.rs  registry.rs  scheduler.rs  supervisor.rs
crates/nexus-mem/: Cargo.toml
crates/nexus-mem/src/: embeddings.rs  episodic.rs  lib.rs  permissions.rs  procedural.rs  semantic.rs  working.rs
crates/nexus-mesh/: Cargo.toml
crates/nexus-mesh/src/: blackboard.rs  crdt.rs  discovery.rs  lib.rs  network.rs  node.rs
crates/nexus-obs/: Cargo.toml
crates/nexus-obs/src/: exporter.rs  ledger.rs  lib.rs  replay.rs  tracer.rs
crates/nexus-obs/src/tui/: app.rs  mod.rs  theme.rs
crates/nexus-obs/src/tui/widgets/: cost_table.rs  log_panel.rs  mesh_tree.rs
crates/nexus-proto/: Cargo.toml
crates/nexus-proto/src/: agent.rs  error.rs  lib.rs  memory.rs  message.rs  model.rs  tool.rs  workflow.rs
crates/nexus-router/: Cargo.toml
crates/nexus-router/src/: cost.rs  lib.rs  router.rs
crates/nexus-router/src/providers/: anthropic.rs  groq.rs  local.rs  mod.rs  openai.rs
crates/nexus-tools/: Cargo.toml
crates/nexus-tools/src/: engine.rs  host_functions.rs  lib.rs  manifest.rs  registry.rs  sandbox.rs
examples/multi-agent-pipeline/: Cargo.toml
examples/multi-agent-pipeline/src/: main.rs
examples/research-agent/: Cargo.toml
examples/research-agent/src/: main.rs
tools/code-exec/: Cargo.toml  manifest.toml
tools/code-exec/src/: lib.rs
tools/file-read/: Cargo.toml  manifest.toml
tools/file-read/src/: lib.rs
tools/http-fetch/: Cargo.toml
tools/http-fetch/src/: lib.rs
tools/web-search/: Cargo.toml  manifest.toml
tools/web-search/src/: lib.rs
