[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Nexus AI agent runtime"
license = "MIT"
repository = "https://github.com/nexus-ai/nexus"
keywords = ["ai", "agent", "cli", "runtime"]
categories = ["command-line-utilities", "asynchronous"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
# Local crates
nexus-proto = { path = "../nexus-proto" }
nexus-kernel = { path = "../nexus-kernel" }
nexus-mem = { path = "../nexus-mem" }
nexus-tools = { path = "../nexus-tools" }
nexus-router = { path = "../nexus-router" }
nexus-mesh = { path = "../nexus-mesh" }
nexus-flow = { path = "../nexus-flow" }
nexus-obs = { path = "../nexus-obs" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

# Specific CLI dependencies
dirs = "5"
colored = "2"
indicatif = "0.17"
console = "0.15"
