[package]
name = "nexus-router"
version = "0.1.0"
edition = "2021"
description = "Universal model gateway and routing engine for the Nexus AI agent runtime"
license = "MIT"
repository = "https://github.com/nexus-ai/nexus"
keywords = ["ai", "llm", "routing", "gateway", "streaming"]
categories = ["asynchronous", "api-bindings"]

[lib]
crate-type = ["lib"]

[dependencies]
# Local crates
nexus-proto = { path = "../nexus-proto" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
tower = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

# Provider & streaming specific dependencies
tiktoken-rs = "0.5"
eventsource-stream = "0.2"
pin-project-lite = "0.2"
