# tools/code-exec/Cargo.toml
[package]
name = "nexus-tool-code-exec"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "code_exec"

[profile.release]
opt-level = "s"
lto = true
strip = true

[dependencies]
# No external dependencies - pure Rust implementation for WASM
