# tools/file-read/Cargo.toml
[package]
name = "nexus-tool-file-read"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "file_read"

[profile.release]
opt-level = "s"
lto = true
strip = true

[dependencies]
# No external dependencies - pure Rust implementation for WASM
